scrollbar width issue solved

--- a/Frontend/cpl-frontend/src/Pages/Nav/Nav.css
+++ b/Frontend/cpl-frontend/src/Pages/Nav/Nav.css
@@ -4,20 +4,20 @@
    padding-left: 0.5rem;
 }
 .navbar ul {
-   margin-top: 1em;
+   margin-top: 1vw;
    display: flex;
    flex-direction: column;
 
 }
 .navbar ul li {
    list-style-type: none;
-   margin-top: 50px;
+   margin-top: 2vw;
 }
 
 .navbar ul li a{
     color:white;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1vw;
     padding-left: 0rem;
 
 }
