--- a/Frontend/cpl-frontend/src/Pages/Seachbar/search.css
+++ b/Frontend/cpl-frontend/src/Pages/Seachbar/search.css
@@ -4,7 +4,7 @@
     box-shadow: 10px 0px 30px 1px #cfcdcd;
     z-index: 1;
     position: fixed;
-    width: 80vw;
+    width: 81vw;
     display: flex;
     justify-content: space-between;
     
